# deposito-resta-lippolis

./: README.md
ai_act_doc_generator/: README.md  pyproject.toml
ai_act_doc_generator/src/ai_act_doc_generator/: main.py
crewai_rag_sphinx_ai_act/: pyproject.toml  qa_flow.html  requirements.txt
crewai_rag_sphinx_ai_act/docs/html/: .buildinfo  configuration.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
crewai_rag_sphinx_ai_act/docs/html/.doctrees/: configuration.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
crewai_rag_sphinx_ai_act/docs/html/_modules/: index.html
crewai_rag_sphinx_ai_act/docs/html/_sources/: configuration.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt
crewai_rag_sphinx_ai_act/docs/html/api/: crews.html  main.html  tools.html
crewai_rag_sphinx_ai_act/docs/source/: conf.py  index.rst  quickstart.rst
crewai_rag_sphinx_ai_act/docs/source/api/: tools.rst
crewai_rag_sphinx_ai_act/faiss_index_example/: index.faiss  index.pkl
crewai_rag_sphinx_ai_act/output/: report.md
crewai_rag_sphinx_ai_act/prompt/: output.md  prompt.md
crewai_rag_sphinx_ai_act/rsc/docs/: smartphones.md  smartphones.txt
crewai_rag_sphinx_ai_act/rsc/rag/: index.faiss  index.pkl
crewai_rag_sphinx_ai_act/src/qa_ai_agent/: __init__.py  main.py
crewai_rag_sphinx_ai_act/src/qa_ai_agent/crews/: __init__.py
crewai_rag_sphinx_ai_act/src/qa_ai_agent/tools/: __init__.py  custom_tool.py  script.py  (+1 more)
(+32 files in other folders)
