[project]
name = "ai_act_doc_generator"
version = "0.1.0"
description = "ai_act_doc_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
]

[project.scripts]
kickoff = "ai_act_doc_generator.main:kickoff"
run_crew = "ai_act_doc_generator.main:kickoff"
plot = "ai_act_doc_generator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
